backend/session/session-api/k8/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: session-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
      labels:
        app: session-api
        team: session
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: insightio/session-api
          name: session-api
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
