backend/session/session-api/k8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: session-api
spec:
  type: ClusterIP
  selector:
    app: session-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
