backend/session/session-api/k8/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: session-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
    - hosts:
        - session-api.dev.snuderls.eu
      secretName: session1-api-tls
  rules:
    - host: session-api.dev.snuderls.eu
      http:
        paths:
          - backend:
              serviceName: session-api
              servicePort: 80
